[package]
name = "boba-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg-the-third = { version = "1.2.2+ffmpeg-6.0" }
ggml-sys-bleedingedge = "=2309250723.0.0"
anyhow = "1.0.75"
rand = "0.8.5"